--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,14 @@
     "sourceMap": true,
     "strict": true,
     "baseUrl": ".",
+    "outDir": "build",
+    // "types": ["jest"],
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     }
   },
   "include": ["src/**/*"],
+  // "exclude": [
+  //   "**/*.test.ts"
+  // ]
 }
